--- a/src/backend_python/requirements.txt
+++ b/src/backend_python/requirements.txt
@@ -1,6 +1,11 @@
 Click==7.0
 Flask==1.1.1
+Flask-SQLAlchemy==2.4.1
 itsdangerous==1.1.0
 Jinja2==2.10.3
 MarkupSafe==1.1.1
+psycopg2==2.8.4
+six==1.13.0
+SQLAlchemy==1.3.11
+SQLAlchemy-Utils==0.35.0
 Werkzeug==0.16.0
