--- a/.gitignore
+++ b/.gitignore
@@ -202,18 +202,20 @@ DerivedData/
 
 # End of https://www.gitignore.io/api/xcode
 # End of https://www.gitignore.io/api/macos,python,windows
-.idea/1Bank.iml
-.idea/inspectionProfiles/profiles_settings.xml
-.idea/misc.xml
-.idea/modules.xml
 .idea/vcs.xml
-.idea/1Bank.iml
-.idea/inspectionProfiles/profiles_settings.xml
-.idea/misc.xml
 .idea/modules.xml
-.idea/vcs.xml
-*.iml
-*.xml
-.idea/1Bank.iml
-.idea/inspectionProfiles/profiles_settings.xml
 .idea/misc.xml
+.idea/inspectionProfiles/profiles_settings.xml
+.idea/1Bank.iml
+venv/pyvenv.cfg
+venv/bin/python3
+venv/bin/python
+venv/bin/activate.fish
+venv/bin/activate.csh
+venv/bin/activate
+*.cfg
+*.fish
+*.csh
+venv/bin/activate
+venv/bin/activate.csh
+*.csh
